Fixed headers spacing

--- a/app/public/css/cg.css
+++ b/app/public/css/cg.css
@@ -16,6 +16,12 @@ body {
     -webkit-font-smoothing:antialiased !important;   
 }
 
+
+h1, h2, h3, h4 {
+    margin:0;
+    padding:0;
+}
+
 /**************************************************/
 /*              [Layout]                          */
 /**************************************************/
